# cryptopals

./: Cargo.toml
set1/: Cargo.toml
set1/data/: english_text.txt
set1/src/: aes_ecb_mode.rs  break_repeating_key_xor.rs  convert_hex_to_base64.rs  detect_aes_ecb.rs  detect_single_character_xor.rs  fixed_xor.rs  helpers.rs  lib.rs  main.rs  repeating_key_xor.rs  single_byte_xor_cipher.rs
set2/: Cargo.toml
set2/src/: byte_at_a_time_ecb.rs  byte_at_a_time_ecb_harder.rs  cbc_bitflipping.rs  cbc_mode.rs  ecb_cbc_oracle.rs  ecb_cut_and_paste.rs  lib.rs  main.rs  pkcs7.rs  pkcs7_padding_validation.rs
set3/: Cargo.toml
set3/src/: break_MT19937_stream_cipher.rs  break_fixed_nonce_ctr_statistically.rs  cbc_padding_oracle.rs  clone_MT19937_rng_from_output.rs  crack_mt_seed.rs  ctr.rs  fixed_nonce_ctr_substitutions.rs  lib.rs  main.rs  mersenne_twister.rs
set4/: Cargo.toml
set4/src/: break_random_read_write_ctr.rs  ctr_bitflipping.rs  hmac_sha1_artificial_timing_leak.rs  hmac_sha1_timing_leak.rs  length_extension_md4_mac.rs  length_extension_sha1_mac.rs  lib.rs  md4.rs  recover_key_cbc_iv_key.rs  sha1.rs  sha1_keyed_mac.rs
set5/: Cargo.toml
set5/src/: dh_negotiated_groups.rs  dictionary_attack_simplified_srp.rs  diffie_hellman.rs  lib.rs  mitm_dh_key_fixing.rs  rsa.rs  srp.rs  srp_zero_key.rs
