[package]
name = "set5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-bigint = {version = "0.5.2", features = ["rand"]}
sha2 = "0.10.7"
set4 = {path = "../set4"}

[dev-dependencies]
set2 = {path = "../set2"}
num-bigint = "0.4.3"