[package]
name = "set5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-bigint = {version = "0.5", features = ["rand"]}
crypto-primes = "0.5.0"
sha2 = "0.10.7"
set2 = {path = "../set2"}
set4 = {path = "../set4"}

[dev-dependencies]
num-bigint = "0.4.3"